Aop, правки.